Fix ipad layout problem

--- a/sites/all/themes/bbbf/css/layouts/responsive-sidebars-rtl.css
+++ b/sites/all/themes/bbbf/css/layouts/responsive-sidebars-rtl.css
@@ -99,10 +99,6 @@
     float: none;
     text-align: center;
   }
-  /* line 118, ../../sass/layouts/responsive-sidebars.scss */
-  #topbar .region-topbar #block-simplenews-1 {
-    width: 400px;
-  }
   /* line 122, ../../sass/layouts/responsive-sidebars.scss */
   #topbar .region-topbar #block-block-5 {
     margin-right: 15px;
